# EKA2L1

./: CMakeLists.txt  inject_coverage.py  optimize_svc.py
src/emu/cpu/: CMakeLists.txt
src/emu/cpu/include/cpu/: arm_dynarmic.h
src/emu/cpu/src/: arm_dynarmic.cpp  arm_factory.cpp  arm_utils.cpp
src/emu/mem/: CMakeLists.txt
src/emu/mem/src/: chunk.cpp  control.cpp  mmu.cpp  process.cpp
src/emu/qt/: CMakeLists.txt
src/emu/qt/include/qt/: applistwidget.h  device_install_dialog.h  mainwindow.h  package_manager_dialog.h  state.h  utils.h
src/emu/qt/src/: applistwidget.cpp  cmdhandler.cpp  device_install_dialog.cpp  dialog_driver.cpp  main.cpp  mainwindow.cpp  package_manager_dialog.cpp  state.cpp  thread.cpp  utils.cpp
src/emu/qt/translations/: eka2l1.ts  eka2l1_ar_SA.ts  eka2l1_az_AZ.ts  eka2l1_be_BY.ts  eka2l1_bn_BD.ts  eka2l1_de_DE.ts  eka2l1_en_US.ts  eka2l1_es_ES.ts  eka2l1_fa_IR.ts  eka2l1_fi_FI.ts  eka2l1_fil_PH.ts  eka2l1_fr_FR.ts  eka2l1_he_IL.ts  eka2l1_id_ID.ts  eka2l1_it_IT.ts  eka2l1_ja_JP.ts  eka2l1_ms_MY.ts  eka2l1_pl_PL.ts  eka2l1_pt_BR.ts  eka2l1_ro_RO.ts  eka2l1_ru_RU.ts  eka2l1_si_LK.ts  eka2l1_tr_TR.ts  eka2l1_uk_UA.ts  eka2l1_vi_VN.ts  eka2l1_zh_CN.ts
src/emu/services/: CMakeLists.txt
src/emu/services/include/services/: allocator.h  context.h  framework.h  host_launch.h  init.h  ngage_coverage.h  utils.h
src/emu/services/include/services/accessory/: accessory.h  common.h
src/emu/services/include/services/alarm/: alarm.h
src/emu/services/include/services/applist/: applist.h  op.h
src/emu/services/include/services/bluetooth/: bt.h  btman.h  btmidman.h
src/emu/services/include/services/centralrepo/: centralrepo.h  common.h  cre.h  repo.h
src/emu/services/include/services/comm/: comm.h
src/emu/services/include/services/etel/: common.h  etel.h  line.h  modmngr.h  phone.h  subsess.h
src/emu/services/include/services/fbs/: bitmap.h  fbs.h  font.h  font_atlas.h  font_store.h  palette.h
src/emu/services/include/services/featmgr/: featmgr.h  op.h
src/emu/services/include/services/fs/: fs.h  op.h  sec.h  std.h
src/emu/services/include/services/goommonitor/: goommonitor.h
src/emu/services/include/services/hwrm/: def.h  hwrm.h  op.h  resource.h
src/emu/services/include/services/internet/: connmonitor.h  nifman.h
src/emu/services/include/services/loader/: loader.h
src/emu/services/include/services/msv/: cache.h  common.h  entry.h  factory.h  msv.h  registry.h  store.h
src/emu/services/include/services/notifier/: notifier.h  plugin.h  queries.h
src/emu/services/include/services/remcon/: remcon.h
src/emu/services/include/services/sensor/: defs.h  sensor.h
src/emu/services/include/services/shutdown/: shutdown.h
src/emu/services/include/services/sisregistry/: common.h  sisregistry.h
src/emu/services/include/services/sms/: settings.h
src/emu/services/include/services/socket/: common.h  connection.h  host.h  protocol.h  server.h  socket.h
src/emu/services/include/services/sysagt/: sysagt.h
src/emu/services/include/services/ui/: eikappui.h
src/emu/services/include/services/unipertar/: unipertar.h
src/emu/services/include/services/window/: bitmap_cache.h  common.h  fifo.h  gcop.def  io.h  keys.h  op.h  opheader.h  scheduler.h  screen.h  util.h  window.h
src/emu/services/src/: allocator.cpp  context.cpp  faker.cpp  framework.cpp  host_launch.cpp  init.cpp  utils.cpp
src/emu/services/src/accessory/: accessory.cpp  common.cpp
src/emu/services/src/alarm/: alarm.cpp
src/emu/services/src/applist/: applist.cpp  common.cpp  registeration.cpp
src/emu/services/src/audio/alf/: alf.cpp
src/emu/services/src/audio/keysound/: context.cpp  keysound.cpp
src/emu/services/src/audio/mmf/: audio.cpp  dev.cpp
src/emu/services/src/backup/: backup.cpp
src/emu/services/src/bluetooth/: bt.cpp  btman.cpp  btmidman.cpp
src/emu/services/src/bluetooth/protocols/: btmidman_inet.cpp  overall.cpp
src/emu/services/src/centralrepo/: centralrepo.cpp  cre.cpp  repo.cpp
src/emu/services/src/comm/: comm.cpp
src/emu/services/src/drm/notifier/: events.cpp  exchange.cpp  notifier.cpp
src/emu/services/src/drm/rights/: db.cpp  import.cpp  object.cpp  rights.cpp
src/emu/services/src/etel/: etel.cpp  line.cpp  modmngr.cpp  phone.cpp  subsess.cpp
src/emu/services/src/fbs/: compress_queue.cpp  fbs.cpp  font_atlas.cpp
src/emu/services/src/fbs/adapter/: font_adapter.cpp  freetype_font_adapter.cpp  gdr_font_adapter.cpp  stb_font_adapter.cpp
src/emu/services/src/fbs/impls/: bitmap.cpp  font.cpp  font_store.cpp
src/emu/services/src/featmgr/: featmgr.cpp
src/emu/services/src/fs/: dirs.cpp  drives.cpp  files.cpp  fs.cpp  parser.cpp  std.cpp
src/emu/services/src/goommonitor/: goommonitor.cpp
src/emu/services/src/hwrm/: hwrm.cpp
src/emu/services/src/hwrm/light/: light.cpp  light_data.cpp
src/emu/services/src/hwrm/power/: power_data.cpp
src/emu/services/src/hwrm/vibration/: vibration.cpp  vibration_data.cpp
src/emu/services/src/internet/: browser.cpp  connmonitor.cpp  nifman.cpp
src/emu/services/src/internet/protocols/: overall.cpp  resolver.cpp  socket.cpp
src/emu/services/src/loader/: loader.cpp
src/emu/services/src/msv/: cache.cpp  entry.cpp  msv.cpp  registry.cpp  store.cpp
src/emu/services/src/msv/operations/: base.cpp  (+3 more)
src/emu/services/src/notifier/: notifier.cpp  queries.cpp
src/emu/services/src/remcon/: remcon.cpp
src/emu/services/src/sensor/: sensor.cpp
src/emu/services/src/shutdown/: shutdown.cpp
src/emu/services/src/sisregistry/: sisregistry.cpp
src/emu/services/src/sms/: settings.cpp
src/emu/services/src/socket/: connection.cpp  netdb.cpp  protocol.cpp  resolver.cpp  server.cpp  socket.cpp
src/emu/services/src/sysagt/: sysagt.cpp
src/emu/services/src/ui/: appserver.cpp  eikappui.cpp
src/emu/services/src/unipertar/: unipertar.cpp
src/emu/services/src/window/: bitmap_cache.cpp  common.cpp  fifo.cpp  io.cpp  scheduler.cpp  screen.cpp  util.cpp  window.cpp
src/emu/system/: CMakeLists.txt
src/emu/system/include/system/: epoc.h
src/emu/system/src/: epoc.cpp  hal.cpp  software.cpp
(+122 files in other folders)
